...
                .height(220.dp)
        ) {

            // Environment
            Image(
                painter = painterResource(environmentResId),
                contentDescription = "Creature environment",
                contentScale = ContentScale.Crop,
                modifier = Modifier.fillMaxSize()
            )

            // Ground shadow
            Box(
...
